<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">


    <item
        android:id="@+id/action_sync"
        android:orderInCategory="100"
        android:title="@string/action_sync"
        android:icon="@drawable/ic_action_refresh"
        app:showAsAction="always" />

    <item
        android:id="@+id/empty"
        android:title="dot"
        android:orderInCategory="101"
        app:showAsAction="always"
        android:icon="@drawable/dot">

        <menu>

    <item
        android:id="@+id/action_share_error"
        android:orderInCategory="100"
        android:title="Send Error"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_update"
        android:orderInCategory="100"
        android:title="Check Update"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />
        </menu>
    </item>


</menu>
